FIPS-6226/FIPS-6233 :: Replace constructor calls of primitive wrapper classes
Change-Id: I86c011ae8bcda03bc07e7c6f3a0f56f594bd868e