@@ -91,7 +91,7 @@ public class NewResourceNameValidator implements IInputValidator {
             if (count == 0) {
                 validResourceName = Messages.NewResourceNameValidator_suggestedNamePrefixSimple + resourceName;
             } else {
-                validResourceName = NLS.bind(Messages.NewResourceNameValidator_suggestedNamePrefixComplex, new Integer(
+                validResourceName = NLS.bind(Messages.NewResourceNameValidator_suggestedNamePrefixComplex, Integer.valueOf(
                         count), resourceName);
             }
         }
