@@ -24,7 +24,7 @@ public class ParanthesisTest extends JavaExprCompilerAbstractTest {
         execAndTestSuccessfull("3.0 + 2.0 * 5.0", Decimal.valueOf("13.00"), Datatype.DECIMAL);
         execAndTestSuccessfull("(3.0 + 2.0) * 5.0", Decimal.valueOf("25.00"), Datatype.DECIMAL);
         execAndTestSuccessfull("5.0 * (3.0 + 2.0)", Decimal.valueOf("25.00"), Datatype.DECIMAL);
-        execAndTestSuccessfull("(3 + 2) * 5", new Integer(25), Datatype.INTEGER);
+        execAndTestSuccessfull("(3 + 2) * 5", Integer.valueOf(25), Datatype.INTEGER);
         execAndTestSuccessfull("(3EUR + 2EUR) * 5", Money.valueOf("25EUR"), Datatype.MONEY);
         execAndTestSuccessfull("(\"3\" + \"2\") + \"5\"", "325", Datatype.STRING);
     }
