@@ -18,20 +18,20 @@ public class MinMaxIntTest extends FunctionAbstractTest {
     public void testCompile() throws Exception {
         registerFunction(new MinMaxInt("MAX", "", true));
 
-        execAndTestSuccessfull("MAX(3; 4)", new Integer(4), Datatype.INTEGER);
-        execAndTestSuccessfull("MAX(4; 3)", new Integer(4), Datatype.INTEGER);
-        execAndTestSuccessfull("MAX(a; 3)", new Integer(4), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
-                new Object[] { new Integer(4) }, Datatype.INTEGER);
-        execAndTestSuccessfull("MAX(4; a)", new Integer(4), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
-                new Object[] { new Integer(3) }, Datatype.INTEGER);
+        execAndTestSuccessfull("MAX(3; 4)", Integer.valueOf(4), Datatype.INTEGER);
+        execAndTestSuccessfull("MAX(4; 3)", Integer.valueOf(4), Datatype.INTEGER);
+        execAndTestSuccessfull("MAX(a; 3)", Integer.valueOf(4), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
+                new Object[] { Integer.valueOf(4) }, Datatype.INTEGER);
+        execAndTestSuccessfull("MAX(4; a)", Integer.valueOf(4), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
+                new Object[] { Integer.valueOf(3) }, Datatype.INTEGER);
 
         registerFunction(new MinMaxInt("MIN", "", false));
-        execAndTestSuccessfull("MIN(3; 4)", new Integer(3), Datatype.INTEGER);
-        execAndTestSuccessfull("MIN(4; 3)", new Integer(3), Datatype.INTEGER);
-        execAndTestSuccessfull("MIN(a; 3)", new Integer(3), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
-                new Object[] { new Integer(4) }, Datatype.INTEGER);
-        execAndTestSuccessfull("MIN(4; a)", new Integer(3), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
-                new Object[] { new Integer(3) }, Datatype.INTEGER);
+        execAndTestSuccessfull("MIN(3; 4)", Integer.valueOf(3), Datatype.INTEGER);
+        execAndTestSuccessfull("MIN(4; 3)", Integer.valueOf(3), Datatype.INTEGER);
+        execAndTestSuccessfull("MIN(a; 3)", Integer.valueOf(3), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
+                new Object[] { Integer.valueOf(4) }, Datatype.INTEGER);
+        execAndTestSuccessfull("MIN(4; a)", Integer.valueOf(3), new String[] { "a" }, new Datatype[] { Datatype.INTEGER },
+                new Object[] { Integer.valueOf(3) }, Datatype.INTEGER);
 
     }
 }
